--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
 	"name": "@irfnd/prettier-config",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"description": "Personal prettier config",
 	"type": "module",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"keywords": [
 		"prettier",
 		"prettier-config"
 	],
 	"author": "Irfandi Iqbal Abimanyu <irfandiabimanyu@gmail.com>",
 	"license": "MIT",
-	"publishConfig": {
-		"access": "public"
+	"scripts": {
+		"build": "tsc"
 	},
 	"peerDependencies": {
 		"prettier": "^3.5.3"
+	},
+	"devDependencies": {
+		"typescript": "^5.8.3"
 	}
 }
