feat: update .gitignore to include dist directory and add prepublishOnly script to package.json

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		}
 	},
 	"scripts": {
-		"build": "unbuild"
+		"build": "unbuild",
+		"prepublishOnly": "npm run build"
 	},
 	"peerDependencies": {
 		"prettier": "^3.5.3"
